@@ -357,6 +357,8 @@
 <dd></dd>
 <dt><a href="mappresentation.html#SetMapMiniImage">SetMapMiniImage</a></dt>
 <dd></dd>
+<dt><a href="config.html#SetMaxOpenGLTexture">SetMaxOpenGLTexture</a></dt>
+<dd></dd>
 <dt><a href="config.html#SetMaxSelectable">SetMaxSelectable</a></dt>
 <dd></dd>
 <dt><a href="config.html#SetMetaServer">SetMetaServer</a></dt>
